--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=ecommerce-service
+
+server.port=8081
+
+spring.datasource.url=jdbc:mysql://localhost:3306/ecommerceService?sessionVariables=sql_mode=NO_ENGINE_SUBSTITUTION
+spring.datasource.username=root
+spring.datasource.password=24680
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
