--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.port=8080
 # database configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/ecommerceService
 spring.datasource.username=root
-spring.datasource.password=24680
+spring.datasource.password=Ultimate01db
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA configuration
