updated application properties file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,8 +32,8 @@ app.email.secret-key=9f4d2c8a7e3b1f6c0a58d7e94b6c2a1e8f3c5d0a9b7e4c1f2d6a8e0b9c5
 # Spring mail
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=gaili.ho1024@gmail.com
-spring.mail.password=123
+spring.mail.username=
+spring.mail.password=
 
 
 #Logging
