Added spring jdbc-session management dependencies and configurations

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,8 @@ server.port=8080
 
 # database configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/ecommerceService
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.username=root
+spring.datasource.password=Ultimate01db
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA configuration
@@ -51,6 +51,26 @@ spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
 spring.mail.properties.mail.smtp.connectiontimeout=5000
 spring.mail.properties.mail.smtp.timeout=5000
 spring.mail.properties.mail.smtp.writetimeout=5000
+
+# Spring session management
+spring.session.store-type=jdbc
+# use always fr development, never for production
+spring.session.jdbc.initialize-schema=always
+# session timeout (defaut is 30 minutes)
+server.servlet.session.timeout=60m
+# clean up interval for expired sessions (default is 1 minute)
+spring.session.jdbc.cleanup-cron= 0 * * * * *
+
+
+# session cookie configuration
+server.servlet.session.cookie.name=JSESSIONID
+server.servlet.session.cookie.http-only=true
+server.servlet.session.cookie.secure=true
+server.servlet.session.cookie.same-site=strict
+
+
+
+
 
 
 #Logging
