Fixed sessionResposirtoy bean not found issue

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -54,13 +54,10 @@ spring.mail.properties.mail.smtp.writetimeout=5000
 
 # Spring session management
 spring.session.store-type=jdbc
-spring.session.jdbc.table-name=SPRING_SESSION
 # use always fr development, never for production
-spring.session.jdbc.initialize-schema=always
+# spring.session.jdbc.initialize-schema=always
 # session timeout (defaut is 30 minutes)
 server.servlet.session.timeout=60m
-# clean up interval for expired sessions every 5 munites
-spring.session.jdbc.cleanup-cron= * 0/5 * * * *
 
 
 # session cookie configuration
